--- a/components/sections/case-study/NextCase/NextCase.module.css
+++ b/components/sections/case-study/NextCase/NextCase.module.css
@@ -5,7 +5,6 @@
 
 .next {
     border-top: 2px solid var(--color-primary-text);
-    background: var(--color-background);
 }
 
 .link {
